Update book chapter

--- a/project/illusionpin/index.html
+++ b/project/illusionpin/index.html
@@ -237,7 +237,7 @@
         <a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1708.06508.pdf" target="_blank">
           PDF
         </a>
-        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.mecite/illusionpin.bib" target="_blank">
+        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.me/cite/illusionpin.bib" target="_blank">
           Cite
         </a>
     </div>
@@ -282,7 +282,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2020 Toan Nguyen &middot; 
+      &copy; 2021 Toan Nguyen &middot; 
 
       Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
       theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
