--- a/project/vcfa/index.html
+++ b/project/vcfa/index.html
@@ -230,22 +230,32 @@
 
 <p><h3>Publication:</h3>
 <ol style="list-style: decimal outside; font-size: 1.2em;">
-    <li>Hossein Siadati, <b>Toan Nguyen</b>, Payas Gupta, Nasir Memon, Markus Jakobsson, <i>Mind your SMSes: Mitigating Social Engineering in Second Factor Authentication</i>, <a href="http://www.sciencedirect.com/science/journal/01674048" target="_blank">Computers &#38; Security</a>, Volume 65, March 2017, Pages 14–28
+    <li>Hossein Siadati, <b>Toan Nguyen</b>, Payas Gupta, Markus Jakobsson, Nasir Memon, <i>Mind your SMSes: Mitigating Social Engineering in Second Factor Authentication</i>, <a href="https://doi.org/10.1007/978-3-030-43754-1_1" target="_blank">Security, Privacy and User Interaction</a>, Springer, Cham, October 2020, Pages 5–22
     <div class="pub-links">
-        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.meMindYourSMSes.pdf" target="_blank">
+        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.me/MindYourSMSes.pdf" target="_blank">
           PDF
         </a>
-        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.mecite/mindyoursmses.bib" target="_blank">
+        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.me/cite/mindyoursmses.bib" target="_blank">
+          Cite
+        </a>
+    </div>
+    </li>
+    <li>Hossein Siadati, <b>Toan Nguyen</b>, Payas Gupta, Nasir Memon, Markus Jakobsson, <i>Mind your SMSes: Mitigating Social Engineering in Second Factor Authentication</i>, <a href="http://www.sciencedirect.com/science/journal/01674048" target="_blank">Computers &#38; Security</a>, Volume 65, March 2017, Pages 14–28
+    <div class="pub-links">
+        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.me/MindYourSMSes.pdf" target="_blank">
+          PDF
+        </a>
+        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.me/cite/mindyoursmses.bib" target="_blank">
           Cite
         </a>
     </div>
     </li>
     <li>Hossein Siadati, <b>Toan Nguyen</b>, Nasir Memon, <i>Verification Code Forwarding Attack</i>, <a href="https://passwordscon.org/" target="_blank">PasswordsCon</a>, University of Cambridge, December 2015
     <div class="pub-links">
-        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.meVCFA_PasswordsCon2015_ToanNguyen.pdf" target="_blank">
+        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.me/VCFA_PasswordsCon2015_ToanNguyen.pdf" target="_blank">
           PDF
         </a>
-        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.mecite/vcfa.bib" target="_blank">
+        <a class="btn btn-primary btn-outline btn-xs" href="https://toannguyen.me/cite/vcfa.bib" target="_blank">
           Cite
         </a>
     </div>
@@ -284,7 +294,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2020 Toan Nguyen &middot; 
+      &copy; 2021 Toan Nguyen &middot; 
 
       Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
       theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
