--- a/publication/fingerdrawpin/index.html
+++ b/publication/fingerdrawpin/index.html
@@ -285,7 +285,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://toannv.com/Finger-Drawn_PIN_ICIP2014_ToanNguyen.pdf" target="_blank">
+<a class="btn btn-primary btn-outline" href="https://toannguyen.me/Finger-Drawn_PIN_ICIP2014_ToanNguyen.pdf" target="_blank">
   PDF
 </a>
 
@@ -344,7 +344,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2020 Toan Nguyen &middot; 
+      &copy; 2021 Toan Nguyen &middot; 
 
       Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
       theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
