--- a/404.html
+++ b/404.html
@@ -173,6 +173,10 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="http://toannguyen.me/publication/mindyoursmses_bookchapter/">Mind your SMSes: Mitigating Social Engineering in Second Factor Authentication</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://toannguyen.me/publication/kidonthephone/">Kid on The Phone! Toward Automatic Detection of Children on Mobile Devices</a></li>
   </ul>
   
@@ -234,7 +238,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2020 Toan Nguyen &middot; 
+      &copy; 2021 Toan Nguyen &middot; 
 
       Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
       theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
