--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -175,6 +175,13 @@
   
   
   <div>
+    <h2><a href="http://toannguyen.me/publication_types/5/">5</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="http://toannguyen.me/publication_types/2/">2</a></h2>
     <div class="article-style">
       
@@ -197,7 +204,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2020 Toan Nguyen &middot; 
+      &copy; 2021 Toan Nguyen &middot; 
 
       Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
       theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
